@@ -22,3 +22,4 @@ nodeflate
 lcp-echo-failure        10
 lcp-echo-interval       5
 
+refuse-eap
