@@ -4,10 +4,6 @@ LOG="echo GOAHEADWEBSERVER: "
 
 start() {
  $LOG "Start goahead"
-    killall -q nvram_daemon
-    killall -q -9 nvram_daemon
-
-    $LOG "Run goahead"
     /bin/goahead &
     touch /tmp/webrun
     sleep 15
