@@ -115,8 +115,13 @@ int main(int argc, char** argv)
 	signal(SIGPIPE, SIG_IGN);
 
         /* Start needed services */
+        doSystem("killall -q nvram_daemon");
+        doSystem("killall -q gpio");
+        doSystem("killall -q -9 nvram_daemon");
+        doSystem("killall -q -9 gpio");
         doSystem("/bin/nvram_daemon &");
         doSystem("/bin/gpio r &");
+        sleep (1);
 
 	if (writeGoPid() < 0)
 		return -1;
